// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clicks next button | verified = false 1`] = `
<div
  class="container-fluid"
>
  <div
    class="content container"
  >
    <p>
      Great, we think we've found your information.
    </p>
    <p>
      Now we just need to make sure it's really you.
    </p>
    <p>
      <b>
            Tell us your birthday below! 
      </b>
    </p>
    <p />
    <div>
      <form
        class=""
      >
        <div
          class="dobWrapper"
        >
          <div
            class="dobRow row"
          >
            <div
              class="col-1 col-sm-1"
            />
            <div
              class="col-3 col-sm-3"
            >
              <span
                class="selectLabel"
              >
                <select
                  class="select selectSuccess selectError"
                  name="month"
                  type="text"
                >
                  <option
                    disabled=""
                    hidden=""
                    value=""
                  >
                    Month
                  </option>
                  <option
                    value="1"
                  >
                    Jan
                  </option>
                  <option
                    value="2"
                  >
                    Feb
                  </option>
                  <option
                    value="3"
                  >
                    Mar
                  </option>
                  <option
                    value="4"
                  >
                    Apr
                  </option>
                  <option
                    value="5"
                  >
                    May
                  </option>
                  <option
                    value="6"
                  >
                    Jun
                  </option>
                  <option
                    value="7"
                  >
                    Jul
                  </option>
                  <option
                    value="8"
                  >
                    Aug
                  </option>
                  <option
                    value="9"
                  >
                    Sep
                  </option>
                  <option
                    value="10"
                  >
                    Oct
                  </option>
                  <option
                    value="11"
                  >
                    Nov
                  </option>
                  <option
                    value="12"
                  >
                    Dec
                  </option>
                </select>
              </span>
            </div>
            <div
              class="col-3 col-sm-3"
            >
              <span
                class="selectLabel"
              >
                <select
                  class="select selectSuccess selectError"
                  name="day"
                  type="text"
                >
                  <option
                    disabled=""
                    hidden=""
                    value=""
                  >
                    Day
                  </option>
                  <option
                    value="1"
                  >
                    1
                  </option>
                  <option
                    value="2"
                  >
                    2
                  </option>
                  <option
                    value="3"
                  >
                    3
                  </option>
                  <option
                    value="4"
                  >
                    4
                  </option>
                  <option
                    value="5"
                  >
                    5
                  </option>
                  <option
                    value="6"
                  >
                    6
                  </option>
                  <option
                    value="7"
                  >
                    7
                  </option>
                  <option
                    value="8"
                  >
                    8
                  </option>
                  <option
                    value="9"
                  >
                    9
                  </option>
                  <option
                    value="10"
                  >
                    10
                  </option>
                  <option
                    value="11"
                  >
                    11
                  </option>
                  <option
                    value="12"
                  >
                    12
                  </option>
                  <option
                    value="13"
                  >
                    13
                  </option>
                  <option
                    value="14"
                  >
                    14
                  </option>
                  <option
                    value="15"
                  >
                    15
                  </option>
                  <option
                    value="16"
                  >
                    16
                  </option>
                  <option
                    value="17"
                  >
                    17
                  </option>
                  <option
                    value="18"
                  >
                    18
                  </option>
                  <option
                    value="19"
                  >
                    19
                  </option>
                  <option
                    value="20"
                  >
                    20
                  </option>
                  <option
                    value="21"
                  >
                    21
                  </option>
                  <option
                    value="22"
                  >
                    22
                  </option>
                  <option
                    value="23"
                  >
                    23
                  </option>
                  <option
                    value="24"
                  >
                    24
                  </option>
                  <option
                    value="25"
                  >
                    25
                  </option>
                  <option
                    value="26"
                  >
                    26
                  </option>
                  <option
                    value="27"
                  >
                    27
                  </option>
                  <option
                    value="28"
                  >
                    28
                  </option>
                  <option
                    value="29"
                  >
                    29
                  </option>
                  <option
                    value="30"
                  >
                    30
                  </option>
                  <option
                    value="31"
                  >
                    31
                  </option>
                </select>
              </span>
            </div>
            <div
              class="col-4 col-sm-4"
            >
              <span
                class="selectLabel"
              >
                <select
                  class="select selectSuccess selectError"
                  name="year"
                  type="text"
                >
                  <option
                    disabled=""
                    hidden=""
                    value=""
                  >
                    Year
                  </option>
                  <option
                    value="1986"
                  >
                    1986
                  </option>
                  <option
                    value="1985"
                  >
                    1985
                  </option>
                  <option
                    value="1984"
                  >
                    1984
                  </option>
                  <option
                    value="1983"
                  >
                    1983
                  </option>
                  <option
                    value="1982"
                  >
                    1982
                  </option>
                  <option
                    value="1981"
                  >
                    1981
                  </option>
                  <option
                    value="1980"
                  >
                    1980
                  </option>
                  <option
                    value="1979"
                  >
                    1979
                  </option>
                  <option
                    value="1978"
                  >
                    1978
                  </option>
                  <option
                    value="1977"
                  >
                    1977
                  </option>
                  <option
                    value="1976"
                  >
                    1976
                  </option>
                  <option
                    value="1975"
                  >
                    1975
                  </option>
                  <option
                    value="1974"
                  >
                    1974
                  </option>
                  <option
                    value="1973"
                  >
                    1973
                  </option>
                  <option
                    value="1972"
                  >
                    1972
                  </option>
                  <option
                    value="1971"
                  >
                    1971
                  </option>
                  <option
                    value="1970"
                  >
                    1970
                  </option>
                  <option
                    value="1969"
                  >
                    1969
                  </option>
                  <option
                    value="1968"
                  >
                    1968
                  </option>
                  <option
                    value="1967"
                  >
                    1967
                  </option>
                  <option
                    value="1966"
                  >
                    1966
                  </option>
                  <option
                    value="1965"
                  >
                    1965
                  </option>
                  <option
                    value="1964"
                  >
                    1964
                  </option>
                  <option
                    value="1963"
                  >
                    1963
                  </option>
                  <option
                    value="1962"
                  >
                    1962
                  </option>
                  <option
                    value="1961"
                  >
                    1961
                  </option>
                  <option
                    value="1960"
                  >
                    1960
                  </option>
                  <option
                    value="1959"
                  >
                    1959
                  </option>
                  <option
                    value="1958"
                  >
                    1958
                  </option>
                  <option
                    value="1957"
                  >
                    1957
                  </option>
                  <option
                    value="1956"
                  >
                    1956
                  </option>
                  <option
                    value="1955"
                  >
                    1955
                  </option>
                  <option
                    value="1954"
                  >
                    1954
                  </option>
                  <option
                    value="1953"
                  >
                    1953
                  </option>
                  <option
                    value="1952"
                  >
                    1952
                  </option>
                  <option
                    value="1951"
                  >
                    1951
                  </option>
                  <option
                    value="1950"
                  >
                    1950
                  </option>
                  <option
                    value="1949"
                  >
                    1949
                  </option>
                  <option
                    value="1948"
                  >
                    1948
                  </option>
                  <option
                    value="1947"
                  >
                    1947
                  </option>
                  <option
                    value="1946"
                  >
                    1946
                  </option>
                  <option
                    value="1945"
                  >
                    1945
                  </option>
                  <option
                    value="1944"
                  >
                    1944
                  </option>
                  <option
                    value="1943"
                  >
                    1943
                  </option>
                  <option
                    value="1942"
                  >
                    1942
                  </option>
                  <option
                    value="1941"
                  >
                    1941
                  </option>
                  <option
                    value="1940"
                  >
                    1940
                  </option>
                  <option
                    value="1939"
                  >
                    1939
                  </option>
                  <option
                    value="1938"
                  >
                    1938
                  </option>
                  <option
                    value="1937"
                  >
                    1937
                  </option>
                  <option
                    value="1936"
                  >
                    1936
                  </option>
                  <option
                    value="1935"
                  >
                    1935
                  </option>
                  <option
                    value="1934"
                  >
                    1934
                  </option>
                  <option
                    value="1933"
                  >
                    1933
                  </option>
                  <option
                    value="1932"
                  >
                    1932
                  </option>
                  <option
                    value="1931"
                  >
                    1931
                  </option>
                  <option
                    value="1930"
                  >
                    1930
                  </option>
                  <option
                    value="1929"
                  >
                    1929
                  </option>
                  <option
                    value="1928"
                  >
                    1928
                  </option>
                  <option
                    value="1927"
                  >
                    1927
                  </option>
                  <option
                    value="1926"
                  >
                    1926
                  </option>
                  <option
                    value="1925"
                  >
                    1925
                  </option>
                  <option
                    value="1924"
                  >
                    1924
                  </option>
                  <option
                    value="1923"
                  >
                    1923
                  </option>
                  <option
                    value="1922"
                  >
                    1922
                  </option>
                  <option
                    value="1921"
                  >
                    1921
                  </option>
                  <option
                    value="1920"
                  >
                    1920
                  </option>
                  <option
                    value="1919"
                  >
                    1919
                  </option>
                  <option
                    value="1918"
                  >
                    1918
                  </option>
                  <option
                    value="1917"
                  >
                    1917
                  </option>
                </select>
              </span>
            </div>
          </div>
        </div>
        <div
          class="errorWrapper"
        >
          <div
            class="textError"
          >
            Uh oh! It looks like you might have entered the wrong birthdate, or we can't find you in our system. Please click HELP for further assistance.
          </div>
        </div>
        <br />
        <br />
        <p>
          <button
            class="button btn btn-secondary"
            type="submit"
          >
            <b>
              NEXT
            </b>
          </button>
        </p>
      </form>
    </div>
  </div>
  <div
    class="footerWrapper container"
  >
    <div>
      <div
        class="wrapper"
      >
        <div
          class="stepActive"
        >
          Account
          <br />
          Setup
          <div
            class="stepNumberActive"
          >
            1
          </div>
        </div>
        <div
          class="step"
        >
          Medication
          <br />
          Review
          <div
            class="stepNumber"
          >
            2
          </div>
        </div>
        <div
          class="step"
        >
          Additional 
          <br />
          Medications
          <div
            class="stepNumber"
          >
            3
          </div>
        </div>
        <div
          class="step"
        >
          Health
          <br />
          Updates
          <div
            class="stepNumber"
          >
            4
          </div>
        </div>
        <div
          class="step"
        >
          Set
          <br />
          Appointment
          <div
            class="stepNumber"
          >
            5
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div
  class="container-fluid"
>
  <div
    class="content container"
  >
    <p>
      Great, we think we've found your information.
    </p>
    <p>
      Now we just need to make sure it's really you.
    </p>
    <p>
      <b>
            Tell us your birthday below! 
      </b>
    </p>
    <p />
    <div>
      <form
        class=""
      >
        <div
          class="dobWrapper"
        >
          <div
            class="dobRow row"
          >
            <div
              class="col-1 col-sm-1"
            />
            <div
              class="col-3 col-sm-3"
            >
              <span
                class="selectLabel"
              >
                <select
                  class="select"
                  name="month"
                  type="text"
                >
                  <option
                    disabled=""
                    hidden=""
                    selected=""
                    value=""
                  >
                    Month
                  </option>
                  <option
                    value="1"
                  >
                    Jan
                  </option>
                  <option
                    value="2"
                  >
                    Feb
                  </option>
                  <option
                    value="3"
                  >
                    Mar
                  </option>
                  <option
                    value="4"
                  >
                    Apr
                  </option>
                  <option
                    value="5"
                  >
                    May
                  </option>
                  <option
                    value="6"
                  >
                    Jun
                  </option>
                  <option
                    value="7"
                  >
                    Jul
                  </option>
                  <option
                    value="8"
                  >
                    Aug
                  </option>
                  <option
                    value="9"
                  >
                    Sep
                  </option>
                  <option
                    value="10"
                  >
                    Oct
                  </option>
                  <option
                    value="11"
                  >
                    Nov
                  </option>
                  <option
                    value="12"
                  >
                    Dec
                  </option>
                </select>
              </span>
            </div>
            <div
              class="col-3 col-sm-3"
            >
              <span
                class="selectLabel"
              >
                <select
                  class="select"
                  name="day"
                  type="text"
                >
                  <option
                    disabled=""
                    hidden=""
                    selected=""
                    value=""
                  >
                    Day
                  </option>
                  <option
                    value="1"
                  >
                    1
                  </option>
                  <option
                    value="2"
                  >
                    2
                  </option>
                  <option
                    value="3"
                  >
                    3
                  </option>
                  <option
                    value="4"
                  >
                    4
                  </option>
                  <option
                    value="5"
                  >
                    5
                  </option>
                  <option
                    value="6"
                  >
                    6
                  </option>
                  <option
                    value="7"
                  >
                    7
                  </option>
                  <option
                    value="8"
                  >
                    8
                  </option>
                  <option
                    value="9"
                  >
                    9
                  </option>
                  <option
                    value="10"
                  >
                    10
                  </option>
                  <option
                    value="11"
                  >
                    11
                  </option>
                  <option
                    value="12"
                  >
                    12
                  </option>
                  <option
                    value="13"
                  >
                    13
                  </option>
                  <option
                    value="14"
                  >
                    14
                  </option>
                  <option
                    value="15"
                  >
                    15
                  </option>
                  <option
                    value="16"
                  >
                    16
                  </option>
                  <option
                    value="17"
                  >
                    17
                  </option>
                  <option
                    value="18"
                  >
                    18
                  </option>
                  <option
                    value="19"
                  >
                    19
                  </option>
                  <option
                    value="20"
                  >
                    20
                  </option>
                  <option
                    value="21"
                  >
                    21
                  </option>
                  <option
                    value="22"
                  >
                    22
                  </option>
                  <option
                    value="23"
                  >
                    23
                  </option>
                  <option
                    value="24"
                  >
                    24
                  </option>
                  <option
                    value="25"
                  >
                    25
                  </option>
                  <option
                    value="26"
                  >
                    26
                  </option>
                  <option
                    value="27"
                  >
                    27
                  </option>
                  <option
                    value="28"
                  >
                    28
                  </option>
                  <option
                    value="29"
                  >
                    29
                  </option>
                  <option
                    value="30"
                  >
                    30
                  </option>
                  <option
                    value="31"
                  >
                    31
                  </option>
                </select>
              </span>
            </div>
            <div
              class="col-4 col-sm-4"
            >
              <span
                class="selectLabel"
              >
                <select
                  class="select"
                  name="year"
                  type="text"
                >
                  <option
                    disabled=""
                    hidden=""
                    selected=""
                    value=""
                  >
                    Year
                  </option>
                  <option
                    value="1986"
                  >
                    1986
                  </option>
                  <option
                    value="1985"
                  >
                    1985
                  </option>
                  <option
                    value="1984"
                  >
                    1984
                  </option>
                  <option
                    value="1983"
                  >
                    1983
                  </option>
                  <option
                    value="1982"
                  >
                    1982
                  </option>
                  <option
                    value="1981"
                  >
                    1981
                  </option>
                  <option
                    value="1980"
                  >
                    1980
                  </option>
                  <option
                    value="1979"
                  >
                    1979
                  </option>
                  <option
                    value="1978"
                  >
                    1978
                  </option>
                  <option
                    value="1977"
                  >
                    1977
                  </option>
                  <option
                    value="1976"
                  >
                    1976
                  </option>
                  <option
                    value="1975"
                  >
                    1975
                  </option>
                  <option
                    value="1974"
                  >
                    1974
                  </option>
                  <option
                    value="1973"
                  >
                    1973
                  </option>
                  <option
                    value="1972"
                  >
                    1972
                  </option>
                  <option
                    value="1971"
                  >
                    1971
                  </option>
                  <option
                    value="1970"
                  >
                    1970
                  </option>
                  <option
                    value="1969"
                  >
                    1969
                  </option>
                  <option
                    value="1968"
                  >
                    1968
                  </option>
                  <option
                    value="1967"
                  >
                    1967
                  </option>
                  <option
                    value="1966"
                  >
                    1966
                  </option>
                  <option
                    value="1965"
                  >
                    1965
                  </option>
                  <option
                    value="1964"
                  >
                    1964
                  </option>
                  <option
                    value="1963"
                  >
                    1963
                  </option>
                  <option
                    value="1962"
                  >
                    1962
                  </option>
                  <option
                    value="1961"
                  >
                    1961
                  </option>
                  <option
                    value="1960"
                  >
                    1960
                  </option>
                  <option
                    value="1959"
                  >
                    1959
                  </option>
                  <option
                    value="1958"
                  >
                    1958
                  </option>
                  <option
                    value="1957"
                  >
                    1957
                  </option>
                  <option
                    value="1956"
                  >
                    1956
                  </option>
                  <option
                    value="1955"
                  >
                    1955
                  </option>
                  <option
                    value="1954"
                  >
                    1954
                  </option>
                  <option
                    value="1953"
                  >
                    1953
                  </option>
                  <option
                    value="1952"
                  >
                    1952
                  </option>
                  <option
                    value="1951"
                  >
                    1951
                  </option>
                  <option
                    value="1950"
                  >
                    1950
                  </option>
                  <option
                    value="1949"
                  >
                    1949
                  </option>
                  <option
                    value="1948"
                  >
                    1948
                  </option>
                  <option
                    value="1947"
                  >
                    1947
                  </option>
                  <option
                    value="1946"
                  >
                    1946
                  </option>
                  <option
                    value="1945"
                  >
                    1945
                  </option>
                  <option
                    value="1944"
                  >
                    1944
                  </option>
                  <option
                    value="1943"
                  >
                    1943
                  </option>
                  <option
                    value="1942"
                  >
                    1942
                  </option>
                  <option
                    value="1941"
                  >
                    1941
                  </option>
                  <option
                    value="1940"
                  >
                    1940
                  </option>
                  <option
                    value="1939"
                  >
                    1939
                  </option>
                  <option
                    value="1938"
                  >
                    1938
                  </option>
                  <option
                    value="1937"
                  >
                    1937
                  </option>
                  <option
                    value="1936"
                  >
                    1936
                  </option>
                  <option
                    value="1935"
                  >
                    1935
                  </option>
                  <option
                    value="1934"
                  >
                    1934
                  </option>
                  <option
                    value="1933"
                  >
                    1933
                  </option>
                  <option
                    value="1932"
                  >
                    1932
                  </option>
                  <option
                    value="1931"
                  >
                    1931
                  </option>
                  <option
                    value="1930"
                  >
                    1930
                  </option>
                  <option
                    value="1929"
                  >
                    1929
                  </option>
                  <option
                    value="1928"
                  >
                    1928
                  </option>
                  <option
                    value="1927"
                  >
                    1927
                  </option>
                  <option
                    value="1926"
                  >
                    1926
                  </option>
                  <option
                    value="1925"
                  >
                    1925
                  </option>
                  <option
                    value="1924"
                  >
                    1924
                  </option>
                  <option
                    value="1923"
                  >
                    1923
                  </option>
                  <option
                    value="1922"
                  >
                    1922
                  </option>
                  <option
                    value="1921"
                  >
                    1921
                  </option>
                  <option
                    value="1920"
                  >
                    1920
                  </option>
                  <option
                    value="1919"
                  >
                    1919
                  </option>
                  <option
                    value="1918"
                  >
                    1918
                  </option>
                  <option
                    value="1917"
                  >
                    1917
                  </option>
                </select>
              </span>
            </div>
          </div>
        </div>
        <br />
        <br />
        <p>
          <button
            class="button btn btn-secondary"
            type="submit"
          >
            <b>
              NEXT
            </b>
          </button>
        </p>
      </form>
    </div>
  </div>
  <div
    class="footerWrapper container"
  >
    <div>
      <div
        class="wrapper"
      >
        <div
          class="stepActive"
        >
          Account
          <br />
          Setup
          <div
            class="stepNumberActive"
          >
            1
          </div>
        </div>
        <div
          class="step"
        >
          Medication
          <br />
          Review
          <div
            class="stepNumber"
          >
            2
          </div>
        </div>
        <div
          class="step"
        >
          Additional 
          <br />
          Medications
          <div
            class="stepNumber"
          >
            3
          </div>
        </div>
        <div
          class="step"
        >
          Health
          <br />
          Updates
          <div
            class="stepNumber"
          >
            4
          </div>
        </div>
        <div
          class="step"
        >
          Set
          <br />
          Appointment
          <div
            class="stepNumber"
          >
            5
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`validation when user typing in entry box and error displayed 1`] = `
<div
  class="container-fluid"
>
  <div
    class="content container"
  >
    <p>
      Great, we think we've found your information.
    </p>
    <p>
      Now we just need to make sure it's really you.
    </p>
    <p>
      <b>
            Tell us your birthday below! 
      </b>
    </p>
    <p />
    <div>
      <form
        class=""
      >
        <div
          class="dobWrapper"
        >
          <div
            class="dobRow row"
          >
            <div
              class="col-1 col-sm-1"
            />
            <div
              class="col-3 col-sm-3"
            >
              <span
                class="selectLabel"
              >
                <select
                  class="select selectSuccess"
                  name="month"
                  type="text"
                >
                  <option
                    disabled=""
                    hidden=""
                    value=""
                  >
                    Month
                  </option>
                  <option
                    value="1"
                  >
                    Jan
                  </option>
                  <option
                    value="2"
                  >
                    Feb
                  </option>
                  <option
                    value="3"
                  >
                    Mar
                  </option>
                  <option
                    value="4"
                  >
                    Apr
                  </option>
                  <option
                    value="5"
                  >
                    May
                  </option>
                  <option
                    value="6"
                  >
                    Jun
                  </option>
                  <option
                    value="7"
                  >
                    Jul
                  </option>
                  <option
                    value="8"
                  >
                    Aug
                  </option>
                  <option
                    value="9"
                  >
                    Sep
                  </option>
                  <option
                    value="10"
                  >
                    Oct
                  </option>
                  <option
                    value="11"
                  >
                    Nov
                  </option>
                  <option
                    value="12"
                  >
                    Dec
                  </option>
                </select>
              </span>
            </div>
            <div
              class="col-3 col-sm-3"
            >
              <span
                class="selectLabel"
              >
                <select
                  class="select selectSuccess"
                  name="day"
                  type="text"
                >
                  <option
                    disabled=""
                    hidden=""
                    value=""
                  >
                    Day
                  </option>
                  <option
                    value="1"
                  >
                    1
                  </option>
                  <option
                    value="2"
                  >
                    2
                  </option>
                  <option
                    value="3"
                  >
                    3
                  </option>
                  <option
                    value="4"
                  >
                    4
                  </option>
                  <option
                    value="5"
                  >
                    5
                  </option>
                  <option
                    value="6"
                  >
                    6
                  </option>
                  <option
                    value="7"
                  >
                    7
                  </option>
                  <option
                    value="8"
                  >
                    8
                  </option>
                  <option
                    value="9"
                  >
                    9
                  </option>
                  <option
                    value="10"
                  >
                    10
                  </option>
                  <option
                    value="11"
                  >
                    11
                  </option>
                  <option
                    value="12"
                  >
                    12
                  </option>
                  <option
                    value="13"
                  >
                    13
                  </option>
                  <option
                    value="14"
                  >
                    14
                  </option>
                  <option
                    value="15"
                  >
                    15
                  </option>
                  <option
                    value="16"
                  >
                    16
                  </option>
                  <option
                    value="17"
                  >
                    17
                  </option>
                  <option
                    value="18"
                  >
                    18
                  </option>
                  <option
                    value="19"
                  >
                    19
                  </option>
                  <option
                    value="20"
                  >
                    20
                  </option>
                  <option
                    value="21"
                  >
                    21
                  </option>
                  <option
                    value="22"
                  >
                    22
                  </option>
                  <option
                    value="23"
                  >
                    23
                  </option>
                  <option
                    value="24"
                  >
                    24
                  </option>
                  <option
                    value="25"
                  >
                    25
                  </option>
                  <option
                    value="26"
                  >
                    26
                  </option>
                  <option
                    value="27"
                  >
                    27
                  </option>
                  <option
                    value="28"
                  >
                    28
                  </option>
                  <option
                    value="29"
                  >
                    29
                  </option>
                  <option
                    value="30"
                  >
                    30
                  </option>
                  <option
                    value="31"
                  >
                    31
                  </option>
                </select>
              </span>
            </div>
            <div
              class="col-4 col-sm-4"
            >
              <span
                class="selectLabel"
              >
                <select
                  class="select selectSuccess"
                  name="year"
                  type="text"
                >
                  <option
                    disabled=""
                    hidden=""
                    value=""
                  >
                    Year
                  </option>
                  <option
                    value="1986"
                  >
                    1986
                  </option>
                  <option
                    value="1985"
                  >
                    1985
                  </option>
                  <option
                    value="1984"
                  >
                    1984
                  </option>
                  <option
                    value="1983"
                  >
                    1983
                  </option>
                  <option
                    value="1982"
                  >
                    1982
                  </option>
                  <option
                    value="1981"
                  >
                    1981
                  </option>
                  <option
                    value="1980"
                  >
                    1980
                  </option>
                  <option
                    value="1979"
                  >
                    1979
                  </option>
                  <option
                    value="1978"
                  >
                    1978
                  </option>
                  <option
                    value="1977"
                  >
                    1977
                  </option>
                  <option
                    value="1976"
                  >
                    1976
                  </option>
                  <option
                    value="1975"
                  >
                    1975
                  </option>
                  <option
                    value="1974"
                  >
                    1974
                  </option>
                  <option
                    value="1973"
                  >
                    1973
                  </option>
                  <option
                    value="1972"
                  >
                    1972
                  </option>
                  <option
                    value="1971"
                  >
                    1971
                  </option>
                  <option
                    value="1970"
                  >
                    1970
                  </option>
                  <option
                    value="1969"
                  >
                    1969
                  </option>
                  <option
                    value="1968"
                  >
                    1968
                  </option>
                  <option
                    value="1967"
                  >
                    1967
                  </option>
                  <option
                    value="1966"
                  >
                    1966
                  </option>
                  <option
                    value="1965"
                  >
                    1965
                  </option>
                  <option
                    value="1964"
                  >
                    1964
                  </option>
                  <option
                    value="1963"
                  >
                    1963
                  </option>
                  <option
                    value="1962"
                  >
                    1962
                  </option>
                  <option
                    value="1961"
                  >
                    1961
                  </option>
                  <option
                    value="1960"
                  >
                    1960
                  </option>
                  <option
                    value="1959"
                  >
                    1959
                  </option>
                  <option
                    value="1958"
                  >
                    1958
                  </option>
                  <option
                    value="1957"
                  >
                    1957
                  </option>
                  <option
                    value="1956"
                  >
                    1956
                  </option>
                  <option
                    value="1955"
                  >
                    1955
                  </option>
                  <option
                    value="1954"
                  >
                    1954
                  </option>
                  <option
                    value="1953"
                  >
                    1953
                  </option>
                  <option
                    value="1952"
                  >
                    1952
                  </option>
                  <option
                    value="1951"
                  >
                    1951
                  </option>
                  <option
                    value="1950"
                  >
                    1950
                  </option>
                  <option
                    value="1949"
                  >
                    1949
                  </option>
                  <option
                    value="1948"
                  >
                    1948
                  </option>
                  <option
                    value="1947"
                  >
                    1947
                  </option>
                  <option
                    value="1946"
                  >
                    1946
                  </option>
                  <option
                    value="1945"
                  >
                    1945
                  </option>
                  <option
                    value="1944"
                  >
                    1944
                  </option>
                  <option
                    value="1943"
                  >
                    1943
                  </option>
                  <option
                    value="1942"
                  >
                    1942
                  </option>
                  <option
                    value="1941"
                  >
                    1941
                  </option>
                  <option
                    value="1940"
                  >
                    1940
                  </option>
                  <option
                    value="1939"
                  >
                    1939
                  </option>
                  <option
                    value="1938"
                  >
                    1938
                  </option>
                  <option
                    value="1937"
                  >
                    1937
                  </option>
                  <option
                    value="1936"
                  >
                    1936
                  </option>
                  <option
                    value="1935"
                  >
                    1935
                  </option>
                  <option
                    value="1934"
                  >
                    1934
                  </option>
                  <option
                    value="1933"
                  >
                    1933
                  </option>
                  <option
                    value="1932"
                  >
                    1932
                  </option>
                  <option
                    value="1931"
                  >
                    1931
                  </option>
                  <option
                    value="1930"
                  >
                    1930
                  </option>
                  <option
                    value="1929"
                  >
                    1929
                  </option>
                  <option
                    value="1928"
                  >
                    1928
                  </option>
                  <option
                    value="1927"
                  >
                    1927
                  </option>
                  <option
                    value="1926"
                  >
                    1926
                  </option>
                  <option
                    value="1925"
                  >
                    1925
                  </option>
                  <option
                    value="1924"
                  >
                    1924
                  </option>
                  <option
                    value="1923"
                  >
                    1923
                  </option>
                  <option
                    value="1922"
                  >
                    1922
                  </option>
                  <option
                    value="1921"
                  >
                    1921
                  </option>
                  <option
                    value="1920"
                  >
                    1920
                  </option>
                  <option
                    value="1919"
                  >
                    1919
                  </option>
                  <option
                    value="1918"
                  >
                    1918
                  </option>
                  <option
                    value="1917"
                  >
                    1917
                  </option>
                </select>
              </span>
            </div>
          </div>
        </div>
        <br />
        <br />
        <p>
          <button
            class="button btn btn-secondary"
            type="submit"
          >
            <b>
              NEXT
            </b>
          </button>
        </p>
      </form>
    </div>
  </div>
  <div
    class="footerWrapper container"
  >
    <div>
      <div
        class="wrapper"
      >
        <div
          class="stepActive"
        >
          Account
          <br />
          Setup
          <div
            class="stepNumberActive"
          >
            1
          </div>
        </div>
        <div
          class="step"
        >
          Medication
          <br />
          Review
          <div
            class="stepNumber"
          >
            2
          </div>
        </div>
        <div
          class="step"
        >
          Additional 
          <br />
          Medications
          <div
            class="stepNumber"
          >
            3
          </div>
        </div>
        <div
          class="step"
        >
          Health
          <br />
          Updates
          <div
            class="stepNumber"
          >
            4
          </div>
        </div>
        <div
          class="step"
        >
          Set
          <br />
          Appointment
          <div
            class="stepNumber"
          >
            5
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
